--- a/elapp/src/main/res/layout/item_live_image_text_hot_item.xml
+++ b/elapp/src/main/res/layout/item_live_image_text_hot_item.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:id="@+id/item_image_text_hot"
         android:layout_width="152dp"
-        android:layout_height="match_parent"
+        android:layout_height="172dp"
         android:background="?attr/selectableItemBackground"
         android:gravity="center_horizontal"
         android:orientation="vertical"
