--- a/elapp/src/main/res/layout/item_video_living.xml
+++ b/elapp/src/main/res/layout/item_video_living.xml
@@ -11,11 +11,11 @@
         android:id="@+id/item_video_living"
         android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="10dp"
         android:background="?attr/selectableItemBackground"
+        android:paddingBottom="10dp"
         android:paddingLeft="12dp"
-        android:paddingRight="12dp">
+        android:paddingRight="12dp"
+        android:paddingTop="16dp">
 
         <RelativeLayout
             android:id="@+id/fl_cover"
@@ -68,6 +68,7 @@
                 android:id="@+id/tv_title"
                 android:layout_width="match_parent"
                 android:layout_height="22dp"
+                android:ellipsize="end"
                 android:gravity="start"
                 android:maxLines="1"
                 android:text="安邦举牌格力的可能性分析"
@@ -84,8 +85,8 @@
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="金色红牛"
                     android:maxLength="6"
+                    android:text="金色红牛"
                     android:textColor="@color/text_color_gray"
                     android:textSize="14sp"/>
 
