--- a/elapp/src/main/res/layout/item_image_text_chat_reply_msg.xml
+++ b/elapp/src/main/res/layout/item_image_text_chat_reply_msg.xml
@@ -85,7 +85,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="12dp"
             android:layout_toLeftOf="@+id/ll_info"
-            android:background="@drawable/bg_chat_myself"
+            android:background="@drawable/bg_chat_myself_vip"
             android:orientation="vertical"
             android:paddingBottom="2dp"
             android:paddingLeft="10dp"
