1 视频界面用户信息 2 精品视频评论列表 3 banner 效果更改 4 修复布局bug

--- a/elapp/src/main/res/layout/item_user_buy_video.xml
+++ b/elapp/src/main/res/layout/item_user_buy_video.xml
@@ -67,6 +67,7 @@
             android:layout_marginTop="4dp"
             android:layout_toRightOf="@+id/cv_operator"
             android:elevation="0dp"
+            app:cardPreventCornerOverlap="false"
             app:cardCornerRadius="4dp">
 
             <TextView
