--- a/elapp/src/main/res/layout/activity_player.xml
+++ b/elapp/src/main/res/layout/activity_player.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.easyvaas.common.emoji.XhsEmoticonsKeyBoardBar android:id="@+id/kv_bar"
-                                                   xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+<com.easyvaas.common.emoji.XhsEmoticonsKeyBoardBar
+    android:id="@+id/kv_bar"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -15,7 +16,7 @@
             android:fitsSystemWindows="true"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <FrameLayout
                 android:id="@+id/fl_player"
                 android:layout_width="match_parent"
                 android:layout_height="200dp">
@@ -37,82 +38,115 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone"/>
-            </RelativeLayout>
+            </FrameLayout>
 
-            <RelativeLayout
-                android:id="@+id/rl_user"
+            <android.support.design.widget.CoordinatorLayout
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/base_white">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <com.easyvaas.common.widget.RoundImageView
-                    android:id="@+id/riv_header"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="16dp"
-                    android:src="@drawable/account_bitmap_user"/>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <android.support.design.widget.AppBarLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_toRightOf="@+id/riv_header"
-                    android:orientation="vertical">
+                    android:background="@color/white"
+                    app:elevation="0dp">
 
                     <TextView
-                        android:id="@+id/tv_name"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/player_video_title"
+                        style="@style/title_text_style"
+                        android:background="@color/white"
+                        android:paddingLeft="12dp"
+                        android:paddingRight="12dp"
+                        android:paddingTop="10dp"/>
+
+                    <RelativeLayout
+                        android:id="@+id/player_user"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:background="?attr/selectableItemBackground">
+
+                        <com.easyvaas.common.widget.RoundImageView
+                            android:id="@+id/player_user_header"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="16dp"
+                            android:src="@drawable/account_bitmap_user"/>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="16dp"
+                            android:layout_toRightOf="@+id/player_user_header"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/player_user_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/nickname"
+                                android:textColor="@color/text_color_gray"
+                                android:textSize="16sp"/>
+
+                            <TextView
+                                android:id="@+id/player_watch_counts"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="1dp"
+                                android:textColor="@color/text_color_gray"
+                                android:textSize="12sp"/>
+
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/player_user_follow_button"
+                            style="@style/user_focus_button_style"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_marginRight="12dp"
+                            android:text="@string/user_follow"
+                            />
+
+                        <View
+                            style="@style/divider_view_style"
+                            android:layout_alignParentBottom="true"/>
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="机构调研"
-                        android:textColor="@color/title_text_color"
-                        android:textSize="16sp"/>
+                        android:background="@color/white"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tv_group"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="每日机构解读"
-                        android:textColor="@color/text_color_gray"
-                        android:textSize="12sp"/>
+                        <com.flyco.tablayout.SlidingTabLayout
+                            android:id="@+id/player_tablayout"
+                            style="@style/slider_layout_user_style"
+                            android:layout_width="0dp"
+                            android:layout_height="44dp"
+                            android:layout_weight="1.5"
+                            />
 
-                </LinearLayout>
+                        <View
+                            android:id="@+id/player_black_view"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:src="@drawable/market_search"
+                            android:visibility="gone"/>
+                    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_follow"
-                    android:layout_width="wrap_content"
-                    android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="12dp"
-                    android:background="@drawable/shape_player_follow_btn_bg"
-                    android:drawableLeft="@drawable/selector_follow_btn"
-                    android:drawablePadding="8dp"
-                    android:gravity="center"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="关注"
-                    android:textSize="16sp"/>
-            </RelativeLayout>
+                    <View
+                        style="@style/divider_view_style"/>
+                </android.support.design.widget.AppBarLayout>
 
-            <View
-                android:id="@+id/line1"
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@color/list_divider_bg"/>
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tabLayout"
-                style="@style/CommonTabLayoutStyle"
-                android:layout_height="44dp"
-                app:tabTextColor="@color/title_text_color"/>
-
-            <android.support.v4.view.ViewPager
-                android:id="@+id/viewPager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/player_viewpager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                    />
+            </android.support.design.widget.CoordinatorLayout>
         </LinearLayout>
 
         <FrameLayout
