--- a/elapp/src/main/res/layout/item_one_img_news.xml
+++ b/elapp/src/main/res/layout/item_one_img_news.xml
@@ -20,8 +20,8 @@
 
         <ImageView
             android:id="@+id/item_news_pic"
-            android:layout_width="110dp"
-            android:layout_height="80dp"
+            android:layout_width="105dp"
+            android:layout_height="70dp"
             android:scaleType="centerCrop"
             android:src="@drawable/account_bitmap_list"
             />
@@ -47,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="2dp"
                 android:layout_marginStart="2dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginBottom="4dp"
                 android:orientation="horizontal">
 
@@ -86,5 +86,7 @@
 
     <View
         android:id="@+id/divider_line"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         style="@style/divider_view_style"/>
 </LinearLayout>
