--- a/elapp/src/main/res/layout/player_need_pay_layout.xml
+++ b/elapp/src/main/res/layout/player_need_pay_layout.xml
@@ -6,87 +6,91 @@
                 android:background="@color/live_room_bg"
     >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:gravity="center">
 
-        <RelativeLayout
-            android:id="@+id/player_pay_layout"
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            >
+            android:orientation="horizontal"
+            android:layout_centerInParent="true"
 
-            <LinearLayout
-                android:id="@+id/player_pay_counts_layout"
+            >
+            <TextView
+                android:id="@+id/player_pay_tips_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_centerHorizontal="true">
+                android:lineSpacingExtra="3dp"
+                android:text="@string/player_pay_tip"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:layout_gravity="center_vertical"
+                android:visibility="visible"/>
 
-                <TextView
-                    android:id="@+id/player_pay_counts"
+            <View
+                android:id="@+id/player_pay_line"
+                android:layout_width="1dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="20dp"
+                android:background="@color/white"
+                android:visibility="visible"/>
+
+            <RelativeLayout
+                android:id="@+id/player_pay_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="6dp"
+                android:layout_gravity="center_vertical"
+                >
+
+                <LinearLayout
+                    android:id="@+id/player_pay_counts_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="0"
-                    android:textColor="@color/pay_text_yellow"
-                    android:textSize="24sp"
-                    />
+                    android:layout_centerHorizontal="true"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/player_pay_counts"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="0"
+                        android:textColor="@color/pay_text_yellow"
+                        android:textSize="24sp"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@id/player_pay_counts"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="2dp"
+                        android:layout_toRightOf="@id/player_pay_counts"
+                        android:text="豆"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        />
+                </LinearLayout>
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBottom="@id/player_pay_counts"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_toRightOf="@id/player_pay_counts"
-                    android:text="豆"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"
-                    />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/playey_pay_buy_button"
-                android:layout_width="86dp"
-                android:layout_height="24dp"
-                android:layout_below="@id/player_pay_counts_layout"
-                android:layout_marginTop="3dp"
-                android:background="@drawable/shape_add_stock_btn_bg"
-                android:gravity="center"
-                android:text="@string/player_go_buy"
-                android:textColor="@color/text_white"
-                android:textSize="14sp"/>
-        </RelativeLayout>
-
-        <View
-            android:id="@+id/player_pay_line"
-            android:layout_width="1dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="15dp"
-            android:background="@color/white"
-            android:layout_toLeftOf="@id/player_pay_layout"
-            android:visibility="visible"/>
-
-        <TextView
-            android:id="@+id/player_pay_tips_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/player_pay_line"
-            android:layout_toLeftOf="@id/player_pay_line"
-            android:lineSpacingExtra="3dp"
-            android:text="@string/player_pay_tip"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            android:visibility="visible"/>
+                    android:id="@+id/playey_pay_buy_button"
+                    android:layout_width="86dp"
+                    android:layout_height="24dp"
+                    android:layout_below="@id/player_pay_counts_layout"
+                    android:layout_marginTop="3dp"
+                    android:background="@drawable/shape_add_stock_btn_bg"
+                    android:gravity="center"
+                    android:text="@string/player_go_buy"
+                    android:textColor="@color/text_white"
+                    android:textSize="14sp"/>
+            </RelativeLayout>
 
 
-    </RelativeLayout>
+
+
+        </LinearLayout>
 
     <ImageView
         android:id="@+id/player_pay_back"
@@ -101,6 +105,6 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="12dp"
         android:layout_marginTop="10dp"
-        android:visibility="gone"
-        android:src="@drawable/btn_share_w_n"/>
+        android:src="@drawable/btn_share_w_n"
+        android:visibility="gone"/>
 </RelativeLayout>
