--- a/elapp/src/main/res/values/arrays.xml
+++ b/elapp/src/main/res/values/arrays.xml
@@ -91,6 +91,7 @@
         <item>@string/good_book</item>
     </string-array>
     <string-array name="play_tab_good_video">
+        <item>@string/video_introduce_text</item>
         <item>@string/comment</item>
         <item>@string/live_data</item>
         <item>@string/good_book</item>
