图文直播---聊天：进入直播间、送礼。

--- a/elapp/src/main/res/layout/item_chat_message.xml
+++ b/elapp/src/main/res/layout/item_chat_message.xml
@@ -23,7 +23,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="14dp"
             android:layout_toRightOf="@+id/chat_other_avatar_civ"
+            android:ellipsize="end"
             android:lines="1"
+            android:maxWidth="140dp"
             android:text="小米粥多"
             android:textColor="@color/text_gray"
             android:textSize="12sp"/>
@@ -35,22 +37,52 @@
             android:layout_toRightOf="@+id/chat_other_name_tv"
             android:src="@drawable/ic_v"/>
 
-        <TextView
-            android:id="@+id/chat_other_message_tv"
+        <FrameLayout
+            android:id="@+id/chat_other_message_bg_fl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/chat_other_name_tv"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="50dp"
             android:layout_toRightOf="@+id/chat_other_avatar_civ"
-            android:background="@drawable/bg_chat_others"
-            android:paddingBottom="4dp"
-            android:paddingLeft="9dp"
-            android:paddingRight="6dp"
-            android:paddingTop="4dp"
-            android:text="主播说的不错啊，学习一下"
-            android:textColor="@color/title_text_color"
-            android:textSize="@dimen/text_size_16"/>
+            android:background="@drawable/bg_chat_others">
+
+            <LinearLayout
+                android:id="@+id/chat_other_message_panel_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:orientation="vertical"
+                android:paddingBottom="4dp"
+                android:paddingLeft="9dp"
+                android:paddingRight="6dp"
+                android:paddingTop="4dp">
+
+                <TextView
+                    android:id="@+id/chat_other_message_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="主播说的不错啊，学习一下"
+                    android:textColor="@color/title_text_color"
+                    android:textSize="@dimen/text_size_16"/>
+
+                <TextView
+                    android:id="@+id/chat_other_message_reply_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/shape_chat_message_reply"
+                    android:paddingBottom="3dp"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:paddingTop="3dp"
+                    android:text="回复王小黑：老师2号加仓不"
+                    android:textColor="@color/text_white"
+                    android:textSize="@dimen/text_size_16"/>
+
+            </LinearLayout>
+
+        </FrameLayout>
 
     </RelativeLayout>
 
@@ -75,27 +107,59 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="14dp"
             android:layout_toLeftOf="@+id/chat_mine_avatar_civ"
+            android:ellipsize="end"
             android:lines="1"
+            android:maxWidth="140dp"
             android:text="我"
             android:textColor="@color/text_gray"
             android:textSize="12sp"/>
 
-        <TextView
-            android:id="@+id/chat_mine_message_tv"
+        <FrameLayout
+            android:id="@+id/chat_mine_message_bg_fl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/chat_mine_name_tv"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/chat_mine_avatar_civ"
-            android:background="@drawable/bg_chat_myself_vip"
-            android:paddingBottom="4dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="9dp"
-            android:paddingTop="4dp"
-            android:text="确实如此没错哈哈"
-            android:textColor="@color/title_text_color"
-            android:textSize="@dimen/text_size_16"/>
+            android:background="@drawable/bg_chat_myself_vip">
+
+            <LinearLayout
+                android:id="@+id/chat_mine_message_panel_ll"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:orientation="vertical"
+                android:paddingBottom="4dp"
+                android:paddingLeft="6dp"
+                android:paddingRight="9dp"
+                android:paddingTop="4dp">
+
+                <TextView
+                    android:id="@+id/chat_mine_message_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="确实如此没错哈哈"
+                    android:textColor="@color/title_text_color"
+                    android:textSize="@dimen/text_size_16"/>
+
+                <TextView
+                    android:id="@+id/chat_mine_message_reply_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:background="@drawable/shape_chat_message_reply"
+                    android:paddingBottom="3dp"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:paddingTop="3dp"
+                    android:text="回复王小黑：老师2号加仓不"
+                    android:textColor="@color/text_white"
+                    android:textSize="@dimen/text_size_16"/>
+
+            </LinearLayout>
+
+        </FrameLayout>
 
     </RelativeLayout>
 
