--- a/elapp/src/main/res/layout/activity_my_image_live_room.xml
+++ b/elapp/src/main/res/layout/activity_my_image_live_room.xml
@@ -5,19 +5,25 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/title_view_bg"
+    android:background="#f8f8f8"
     android:orientation="vertical">
 
     <include
         android:id="@+id/ll_title"
         layout="@layout/layout_my_image_live_room_title"/>
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        style="@style/CommonTabLayoutStyle"
-        android:layout_height="44dp"
-        app:tabTextColor="@color/title_text_color"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
+            style="@style/CommonTabLayoutStyle"
+            android:layout_height="44dp"
+            app:tabTextColor="@color/title_text_color"/>
+
+    </FrameLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
