--- a/elapp/src/main/res/layout/activity_player.xml
+++ b/elapp/src/main/res/layout/activity_player.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.easyvaas.common.emoji.XhsEmoticonsKeyBoardBar
-    android:id="@+id/kv_bar"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
     <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
+    <com.easyvaas.common.emoji.XhsEmoticonsKeyBoardBar
+        android:id="@+id/kv_bar"
+        android:fitsSystemWindows="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </com.easyvaas.common.emoji.XhsEmoticonsKeyBoardBar>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -148,7 +149,12 @@
                     />
             </android.support.design.widget.CoordinatorLayout>
         </LinearLayout>
-
+    <com.easyvaas.elapp.view.base.BottomSendView
+        android:id="@+id/player_bottom_send"
+        android:layout_gravity="bottom"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
         <FrameLayout
             android:id="@+id/fl_gift_container"
             android:layout_width="match_parent"
@@ -170,5 +176,5 @@
             android:layout_height="match_parent"
             android:background="#B3303030"
             android:visibility="gone"/>
+
     </FrameLayout>
-</com.easyvaas.common.emoji.XhsEmoticonsKeyBoardBar>
