--- a/elapp/src/main/res/layout/fragment_user_center_layout.xml
+++ b/elapp/src/main/res/layout/fragment_user_center_layout.xml
@@ -35,7 +35,7 @@
             android:id="@+id/user_settting"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:layout_gravity="right"
+            android:layout_gravity="right|center_vertical"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="10dp"
             android:src="@drawable/btn_setting_n"/>
@@ -52,13 +52,17 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <View
+                android:layout_width="match_parent"
+                android:background="@color/list_divider_bg"
+                android:layout_height="4dp"/>
             <RelativeLayout
                 android:id="@+id/user_edit_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="22dp"
                 android:paddingTop="16dp"
-                android:paddingBottom="31dp"
+                android:paddingBottom="8dp"
                 android:background="?attr/selectableItemBackground"
                 >
 
@@ -87,18 +91,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/user_center_name"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginTop="3dp"
                     android:textColor="@color/text_color_gray"
                     android:textSize="16sp"
                     android:maxLength="15"
-                    tools:text=""/>
+                    tools:text="hhhhhhhhhhhadhhsdahdahd"/>
 
                 <TextView
                     android:id="@+id/user_center_focuscounts"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/user_center_introduce"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="10dp"
                     android:textColor="@color/text_color_orange"
                     android:textSize="17sp"
                     android:paddingBottom="10dp"
@@ -146,6 +150,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="30dp"
                     android:src="@drawable/user_avtor"
+                    android:layout_marginTop="10dp"
                     app:small_height="30dp"
                     app:small_icon="@drawable/ic_v"
                     app:small_width="30dp"/>
