--- a/elapp/src/main/res/layout/view_important_news_header.xml
+++ b/elapp/src/main/res/layout/view_important_news_header.xml
@@ -10,8 +10,13 @@
 
     <include
         android:id="@+id/banner_layout"
-        layout="@layout/view_header_discover_slider"/>
-
+        layout="@layout/view_header_discover_slider"
+        />
+    <View
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="2dp"
+        style="@style/divider_view_style"
+        android:background="@color/list_divider_bg"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="78dp"
@@ -25,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingLeft="11dp">
+            android:paddingLeft="12dp">
 
             <TextView
                 android:id="@+id/tv_exponent_name1"
@@ -54,9 +59,10 @@
 
         <View
             android:layout_width="1dp"
-            android:layout_height="49dp"
+            android:layout_height="55dp"
             android:layout_gravity="center_vertical"
-            android:background="#dddddd"/>
+            android:layout_marginBottom="4dp"
+            android:background="@color/list_divider_bg"/>
 
         <LinearLayout
             android:id="@+id/ll_exponent2"
@@ -64,7 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingLeft="11dp">
+            android:paddingLeft="12dp">
 
             <TextView
                 android:id="@+id/tv_exponent_name2"
@@ -93,9 +99,10 @@
 
         <View
             android:layout_width="1dp"
-            android:layout_height="49dp"
+            android:layout_height="55dp"
+            android:layout_marginBottom="4dp"
             android:layout_gravity="center_vertical"
-            android:background="#dddddd"/>
+            android:background="@color/list_divider_bg"/>
 
         <LinearLayout
             android:id="@+id/ll_exponent3"
@@ -103,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingLeft="11dp">
+            android:paddingLeft="12dp">
 
             <TextView
                 android:id="@+id/tv_exponent_name3"
@@ -130,6 +137,10 @@
                 tools:text="-2.23[-0.10%]"/>
         </LinearLayout>
     </LinearLayout>
+    <View
+        android:layout_marginTop="5dp"
+        style="@style/divider_view_style"
+        android:background="@color/list_divider_bg"/>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -143,6 +154,7 @@
         app:cardBackgroundColor="#fafafa"
         app:cardCornerRadius="5dp"
         app:cardElevation="0dp"
+        android:visibility="gone"
         app:cardPreventCornerOverlap="false">
 
         <LinearLayout
