--- a/extras/EmojiKeyboard/src/main/res/layout/view_keyboardbar_new.xml
+++ b/extras/EmojiKeyboard/src/main/res/layout/view_keyboardbar_new.xml
@@ -1,97 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/emotion_key_board_br_ll"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="vertical">
+<LinearLayout android:id="@+id/emotion_key_board_br_ll"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/white"
+              android:orientation="vertical">
 
-    <View
-        android:id="@+id/view"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/spilt_line" />
-
-    <!--chat func-->
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/shape_chat_input_bg"
-        android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingTop="8dp">
-
-        <RelativeLayout
-            android:id="@+id/rl_input"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:layout_toLeftOf="@+id/rl_multi_and_send"
-            android:layout_toRightOf="@id/cb_barrage"
-            android:orientation="horizontal">
-
-            <com.easyvaas.common.emoji.view.EmoticonsEditText
-                android:id="@+id/et_chat"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:background="@null"
-                android:hint="@string/barrage_hint_input"
-                android:paddingBottom="5dp"
-                android:maxLength="140"
-                android:paddingLeft="8dp"
-                android:paddingRight="5dp"
-                android:paddingTop="5dp"
-                android:textColorHint="@color/edittext_hint_color"
-                android:textSize="16dp" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/tv_text_length"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="14dp"
-            android:layout_toLeftOf="@+id/line"
-            android:text="@string/text_length_prompt"
-            android:textColor="#d9d9d9"
-            android:textSize="16dp" />
+        android:layout_height="50dp"
+        android:orientation="vertical">
 
         <View
-            android:id="@+id/line"
-            android:layout_width="1dp"
-            android:layout_height="32dp"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_toLeftOf="@+id/rl_multi_and_send"
-            android:background="#d9d9d9" />
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#eeeeee"/>
 
-        <RelativeLayout
-            android:id="@+id/rl_multi_and_send"
-            android:layout_width="58dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:focusableInTouchMode="true"
-            android:orientation="horizontal">
+        <com.easyvaas.common.emoji.view.EmoticonsEditText
+            android:id="@+id/bottom_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/shape_chat_input_bg"
+            android:focusable="true"
+            android:gravity="center_vertical|left"
+            android:hint="@string/video_input_comment"
+            android:imeOptions="actionSend"
+            android:inputType="text"
+            android:maxLength="140"
+            android:paddingLeft="12dp"
+            android:textColorHint="#999999"
+            android:textSize="14sp"/>
 
-            <ImageView
-                android:id="@+id/btn_send"
-                android:layout_width="50dp"
-                android:layout_height="30dp"
-                android:layout_centerInParent="true"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:src="@drawable/btn_send_n"
-                android:text="@string/btn_text_send"
-                android:textSize="12sp" />
-        </RelativeLayout>
-    </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#eeeeee"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ly_foot_func"
@@ -105,6 +53,6 @@
             android:id="@+id/ic_facekeyboard"
             layout="@layout/view_keyboardpopwindow"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"/>
     </LinearLayout>
 </LinearLayout>
