--- a/elapp/src/main/res/layout/item_video_living.xml
+++ b/elapp/src/main/res/layout/item_video_living.xml
@@ -28,33 +28,40 @@
                 android:layout_height="70dp"
                 android:background="@drawable/account_bitmap_list"/>
 
-            <View
-                android:layout_width="120dp"
-                android:layout_height="70dp"
-                android:background="@color/video_living_cover"/>
-
-            <ImageView
-                android:id="@+id/iv_hot"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="4dp"
-                android:layout_marginLeft="4dp"
-                android:src="@drawable/ic_hot"/>
-
-            <TextView
-                android:id="@+id/tv_watch_count"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:layout_alignParentBottom="true"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="3dp"
-                android:layout_toRightOf="@+id/iv_hot"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:text="17,184人观看"
-                android:textColor="@color/white"
-                android:textSize="14sp"/>
+                android:background="#66303030">
+
+                <ImageView
+                    android:id="@+id/iv_eye"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_eye"/>
+
+                <TextView
+                    android:id="@+id/tv_watch_count"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_toLeftOf="@+id/iv_hot"
+                    android:layout_toRightOf="@+id/iv_eye"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:text="17,184人观看"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"/>
+
+                <ImageView
+                    android:id="@+id/iv_hot"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="4dp"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_hot"/>
+
+            </RelativeLayout>
 
         </RelativeLayout>
 
@@ -107,8 +114,8 @@
                 android:layout_height="20dp"
                 android:layout_alignParentBottom="true"
                 android:elevation="0dp"
-                app:cardPreventCornerOverlap="false"
-                app:cardCornerRadius="4dp">
+                app:cardCornerRadius="4dp"
+                app:cardPreventCornerOverlap="false">
 
                 <TextView
                     android:id="@+id/tv_operator"
@@ -132,10 +139,11 @@
                 android:layout_marginLeft="6dp"
                 android:layout_toRightOf="@+id/cv_operator"
                 android:elevation="0dp"
-                app:cardPreventCornerOverlap="false"
-                app:cardCornerRadius="4dp">
+                app:cardCornerRadius="4dp"
+                app:cardPreventCornerOverlap="false">
 
                 <TextView
+                    android:id="@+id/tv_pay"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@color/video_living_pay"
