--- a/elapp/src/main/res/layout/view_image_live_input.xml
+++ b/elapp/src/main/res/layout/view_image_live_input.xml
@@ -10,47 +10,45 @@
     <RelativeLayout
         android:id="@+id/rl_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:minHeight="50dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp">
 
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:paddingLeft="12dp"
-            android:layout_marginRight="76dp"
-            android:paddingTop="10dp"
-            android:background="#fff"
-            android:hint="大师，快来聊天吧"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="64dp"
+            android:background="@drawable/shape_chat_input"
+            android:hint="大师，快来直播吧"
+            android:imeOptions="actionSend"
+            android:inputType="text"
             android:maxLength="1000"
             android:maxLines="5"
+            android:minHeight="40dp"
+            android:paddingBottom="8dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="18dp"
+            android:paddingTop="8dp"
             android:textSize="16dp"/>
 
-        <View
-            android:id="@+id/line"
-            android:layout_width="1dp"
-            android:layout_height="32dp"
-            android:layout_alignBottom="@id/editText"
-            android:layout_marginRight="8dp"
-            android:layout_toLeftOf="@+id/iv_send"
-            android:background="#d9d9d9"/>
-
         <ImageView
-            android:id="@+id/iv_send"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_alignBottom="@id/editText"
+            android:id="@+id/iv_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="11dp"
-            android:padding="5dp"
-            android:src="@drawable/btn_send_n"/>
+            android:layout_marginRight="12dp"
+            android:src="@drawable/btn_add_picture_xm"/>
+
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/rl_option"
         android:layout_width="match_parent"
         android:layout_height="36dp"
-        android:background="#f8f8f8"
+        android:background="#fbfbfb"
         android:visibility="visible">
 
         <RadioGroup
@@ -68,7 +66,8 @@
                 android:button="@null"
                 android:checked="true"
                 android:text="普通"
-                android:textColor="@color/selector_msg_type_btn"/>
+                android:textColor="@color/selector_msg_type_btn"
+                android:textSize="@dimen/text_size_16"/>
 
             <RadioButton
                 android:id="@+id/tvImportant"
@@ -77,7 +76,8 @@
                 android:layout_marginLeft="21dp"
                 android:button="@null"
                 android:text="高亮"
-                android:textColor="@color/selector_msg_type_btn"/>
+                android:textColor="@color/selector_msg_type_btn"
+                android:textSize="@dimen/text_size_16"/>
 
             <RadioButton
                 android:id="@+id/tvStick"
@@ -86,23 +86,76 @@
                 android:layout_marginLeft="21dp"
                 android:button="@null"
                 android:text="置顶"
-                android:textColor="@color/selector_msg_type_btn"/>
+                android:textColor="@color/selector_msg_type_btn"
+                android:textSize="@dimen/text_size_16"/>
+
         </RadioGroup>
 
-        <ImageView
-            android:id="@+id/iv_image"
-            android:layout_width="29dp"
-            android:layout_height="29dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="9dp"
-            android:padding="7dp"
-            android:src="@drawable/btn_add_picture_n"/>
     </RelativeLayout>
 
-    <View
-        android:id="@+id/placeholder_view"
+    <LinearLayout
+        android:id="@+id/ll_picture"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"/>
+        android:layout_height="98dp"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:id="@+id/ll_camera"
+            android:layout_width="82dp"
+            android:layout_height="98dp"
+            android:background="?attr/selectableItemBackground"
+            android:orientation="vertical"
+            android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="12dp">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/btn_camera_xm"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="相机"
+                android:textColor="@color/text_gray"
+                android:textSize="14sp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_album"
+            android:layout_width="82dp"
+            android:layout_height="98dp"
+            android:layout_marginLeft="2dp"
+            android:background="?attr/selectableItemBackground"
+            android:orientation="vertical"
+            android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="12dp">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/btn_album_xm"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="照片"
+                android:textColor="@color/text_gray"
+                android:textSize="14sp"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 </LinearLayout>
