--- a/elapp/src/main/res/values/colors.xml
+++ b/elapp/src/main/res/values/colors.xml
@@ -80,7 +80,7 @@
     <color name="text_color_main">#262626</color>
     <color name="text_color_secondary_level">#858585</color>
     <color name="text_color_three_level">#ACACAC</color>
-    <color name="text_gray">#d4d4d4</color>
+    <color name="text_gray">#999999</color>
     <color name="live_bg_white">#F0F7FF</color>
     <color name="base_color_btn_fill_blue_focused">#73ADEE</color>
     <color name="base_color_btn_stoke_blue_focused">#EBF5FF</color>
@@ -203,9 +203,10 @@
 
     <color name="video_living_cover">#7f090909</color>
     <color name="video_living_living">#ff9e00</color>
-    <color name="video_living_good">#e36060</color>
+    <color name="video_living_good">#659ae0</color>
     <color name="video_living_playback">#999999</color>
-    <color name="video_living_pay">#659ae0</color>
+    <color name="video_living_pay">#e36060</color>
+    <color name="video_living_payed">#382f2f</color>
 
     <color name="user_comment_blue">#8ec1eb</color>
     <color name="user_comment_orange">#ebbc8e</color>
